# gnet

./: .gitignore  Cargo.toml  licence-apache  licence-mit  readme.md
docs/: overview.md  protocol.md
src/: byte.rs  connection.rs  endpoint.rs  id.rs  lib.rs  listen.rs  listener.rs  message.rs  packet.rs  protocol.rs
src/byte/: standard.rs
src/connection/: ack.rs  connection.rs  context.rs  deliver.rs  error.rs  id.rs  listen.rs  packet.rs  parcel.rs  socket.rs
src/connection/parcel/: header.rs  signal.rs
src/endpoint/: basic.rs  client.rs  demux.rs  hash.rs  server.rs  transmit.rs  wrapper.rs
src/endpoint/demux/: basic.rs  test.rs
src/endpoint/transmit/: basic.rs  test.rs
src/listen/: accept.rs  test.rs
src/protocol/: connection.rs  listen.rs
src/protocol/connection/: error.rs
src/protocol/listen/: accept.rs
tests/: connect_test.rs  single_client_test.rs
