[package]
name = "gnet"
version = "0.0.1"
authors = ["Grigory 'Griffone' Glukhov <thegriffones@gmail.com>"]
edition = "2018"

description = "Message-based networking over UDP for real-time applications."
readme = "readme.md"
keywords = ["networking", "udp", "message"]
categories = ["network-programming"]
licence = "Apache-2.0 OR MIT"

repository = "https://github.com/Griffone/gnet"
documentation = "https://docs.rs/gnet"

[dependencies]
rand = "0.8.2"

[dev-dependencies]
hashers = "1.0.1"

[features]
adv-endpoints = []

default = []
